Right align navbar and fix toggle

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,10 @@ ul, ol {
     padding: 0;
 }
 
+.navbar-toggler {
+    text-align: right;
+}
+
 /* header and navigation links */
 
 .logo {
